--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool]
 [tool.poetry]
 name = "asyncio-pool-ng"
-version = "0.7.2.dev"
+version = "0.7.2"
 description = "A pool of coroutine functions."
 authors = ["Kyle Smith <smithk86@smc3.com>"]
 license = "MIT"
