--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -48,4 +48,4 @@ repos:
     rev: "v1.3.0"
     hooks:
       - id: mypy
-        additional_dependencies: ["anyio", "pytest"]
+        additional_dependencies: ["pytest"]
