--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,38 +1,38 @@
 [build-system]
-requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core"]
 
 [tool.black]
 line-length = 120
 
 [tool.mypy]
-strict = true
 packages = ["asyncio_pool", "tests"]
+strict = true
 
 [tool.poetry]
-name = "asyncio-pool-ng"
-version = "0.8.0"
-description = "A pool of coroutine functions."
 authors = ["Kyle Smith <smithk86@smc3.com>"]
-license = "MIT"
-readme = "README.md"
-homepage = "https://github.com/smithk86/asyncio-pool-ng"
-repository = "https://github.com/smithk86/asyncio-pool-ng"
-documentation = "https://smithk86.github.io/asyncio-pool-ng"
 classifiers = [
     "Intended Audience :: Developers",
     "Framework :: AsyncIO",
     "Topic :: Software Development :: Libraries :: Python Modules",
 ]
+description = "A pool of coroutine functions."
+documentation = "https://smithk86.github.io/asyncio-pool-ng"
+homepage = "https://github.com/smithk86/asyncio-pool-ng"
+license = "MIT"
+name = "asyncio-pool-ng"
 packages = [{ include = "asyncio_pool" }]
+readme = "README.md"
+repository = "https://github.com/smithk86/asyncio-pool-ng"
+version = "0.8.0"
 
 [tool.poetry.dependencies]
 python = ">=3.11,<4"
 
 [tool.poetry.group.dev.dependencies]
+mypy = "*"
 pytest = ">=7.0"
 pytest-asyncio = ">=0.20"
-mypy = "*"
 pytest-mypy = "*"
 
 [tool.poetry.group.docs.dependencies]
@@ -55,6 +55,28 @@ testpaths = ["tests"]
 strict-imports = false
 
 [tool.ruff]
+exclude = ["__pycache__", "venv", ".venv"]
+line-length = 120                          # match Black
+target-version = 'py311'
+
+[tool.ruff.lint]
+ignore = [
+    "A003",  # flake8-builtins - class attribute {name} is shadowing a python builtin
+    "B010",  # flake8-bugbear - do not call setattr with a constant attribute value
+    "D100",  # pydocstyle - missing docstring in public module
+    "D101",  # pydocstyle - missing docstring in public class
+    "D102",  # pydocstyle - missing docstring in public method
+    "D103",  # pydocstyle - missing docstring in public function
+    "D104",  # pydocstyle - missing docstring in public package
+    "D105",  # pydocstyle - missing docstring in magic method
+    "D106",  # pydocstyle - missing docstring in public nested class
+    "D107",  # pydocstyle - missing docstring in __init__
+    "D202",  # pydocstyle - no blank lines allowed after function docstring
+    "D205",  # pydocstyle - 1 blank line required between summary line and description
+    "D415",  # pydocstyle - first line should end with a period, question mark, or exclamation point
+    "E501",  # pycodestyle line too long, handled by black
+    "UP037", # pyupgrade - removes quotes from type annotation
+]
 select = [
     "A",   # flake8-builtins
     "B",   # flake8-bugbear
@@ -91,33 +113,13 @@ select = [
     "W",   # pycodestyle - warning
     "YTT", # flake8-2020
 ]
-exclude = ["__pycache__", "venv", ".venv"]
-ignore = [
-    "A003",  # flake8-builtins - class attribute {name} is shadowing a python builtin
-    "B010",  # flake8-bugbear - do not call setattr with a constant attribute value
-    "D100",  # pydocstyle - missing docstring in public module
-    "D101",  # pydocstyle - missing docstring in public class
-    "D102",  # pydocstyle - missing docstring in public method
-    "D103",  # pydocstyle - missing docstring in public function
-    "D104",  # pydocstyle - missing docstring in public package
-    "D105",  # pydocstyle - missing docstring in magic method
-    "D106",  # pydocstyle - missing docstring in public nested class
-    "D107",  # pydocstyle - missing docstring in __init__
-    "D202",  # pydocstyle - no blank lines allowed after function docstring
-    "D205",  # pydocstyle - 1 blank line required between summary line and description
-    "D415",  # pydocstyle - first line should end with a period, question mark, or exclamation point
-    "E501",  # pycodestyle line too long, handled by black
-    "UP037", # pyupgrade - removes quotes from type annotation
-]
-line-length = 120 # match Black
-target-version = 'py311'
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 max-complexity = 12
 
-[tool.ruff.pydocstyle]
+[tool.ruff.lint.pydocstyle]
 convention = "google"
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "tests/**/*.*" = ["BLE001", "S101"]
 "tests/loadtest.py" = ["T201"]
